documented guideline to reproduce micro-bench